# zcz

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
opt/: deoxysbc.c  deoxysbc.h  gfmul.c  gfmul.h  utils-opt.c  utils-opt.h  zcz.c  zcz.h
ref/: aes.c  aes.h  deoxysbc.c  deoxysbc.h  foo.c  foo.h  zcz.c  zcz.h
scripts/: plot.py  plot.sh  powerpolicy.sh  turboboost.sh
shared/: align.h  benchmark-deoxysbc.cpp  benchmark-zcz.cpp  benchmark.c  benchmark.h  deoxysbc_opt_test_case_context.h  deoxysbc_test_case_context.h  gf_doubling_test_case_context.h  json_parser.cpp  json_parser.h  memutils.cpp  memutils.h  utils.c  utils.h  zcz_test_case_context.h
testdata/: deoxysbc_128_128_encrypt.json  deoxysbc_128_128_encrypt_256_blocks.json  deoxysbc_128_128_encrypt_257_blocks.json  deoxysbc_128_128_encrypt_4_blocks.json  deoxysbc_128_256_encrypt.json  deoxysbc_128_256_encrypt_256_blocks.json  deoxysbc_128_256_encrypt_257_blocks.json  deoxysbc_128_256_encrypt_4_blocks.json  deoxysbc_128_384_encrypt.json  deoxysbc_128_384_encrypt_256_blocks.json  deoxysbc_128_384_encrypt_256_blocks_opt.json  deoxysbc_128_384_encrypt_256_blocks_zero_ctr.json  deoxysbc_128_384_encrypt_256_blocks_zero_ctr_opt.json  deoxysbc_128_384_encrypt_257_blocks.json  deoxysbc_128_384_encrypt_257_blocks_opt.json  deoxysbc_128_384_encrypt_4_blocks.json  deoxysbc_128_384_encrypt_4_blocks_opt.json  deoxysbc_128_384_encrypt_opt.json  gf_doubling_16_blocks.json  gf_doubling_2_blocks.json  gf_doubling_2_blocks_no_mask.json  gf_doubling_8_blocks.json  gf_doubling_9_blocks.json  gf_times_four_16_blocks.json  gf_times_four_1_block.json  gf_times_four_2_blocks.json  gf_times_four_2_blocks_no_mask.json  gf_times_four_8_blocks.json  gf_times_four_9_blocks.json  zcz_basic_decrypt_10_blocks.json  zcz_basic_decrypt_257_blocks.json  zcz_basic_decrypt_3_blocks.json  zcz_basic_decrypt_empty_message.json  zcz_basic_encrypt_1_block.json  zcz_basic_encrypt_257_blocks.json  zcz_basic_encrypt_3_blocks.json  zcz_basic_encrypt_4_blocks.json  zcz_decrypt_1024_blocks.json  zcz_decrypt_1_block.json  zcz_decrypt_256_blocks.json  (+6 more)
tests/: test-deoxysbc-opt.cpp  test-deoxysbc-original.cpp  test-deoxysbc-ref.cpp  test-gfdoubling-opt.cpp  test-gfdoubling-ref.cpp  test-zcz.cpp
